# clawguard-sdk

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: publish-plugin.yml
clawguard/cli/: main.py
openclaw-plugin/: .npmignore  CHANGELOG.md  README.md  openclaw.plugin.json  package-lock.json  package.json  tsconfig.json
openclaw-plugin/scripts/: verify_openclaw_plugin_install_integrity.ps1
openclaw-plugin/src/: client.test.ts  client.ts  index.test.ts  index.ts  sensitive.test.ts  sensitive.ts  types.ts
tests/openclaw-plugin/: client.test.ts  index.internal.test.ts  index.test.ts  manifest.test.ts  security.test.ts  sensitive.test.ts
