[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clawguard-sdk"
version = "0.1.0"
description = "Python SDK for ClawGuard — security monitoring for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["ai", "agents", "security", "monitoring", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "structlog>=24.1",
]

[project.optional-dependencies]
cli = [
    "typer>=0.12",
    "rich>=13.7",
]

[project.scripts]
clawguard = "clawguard.cli.main:app"

[project.urls]
Homepage = "https://github.com/rutipo/clawguard-sdk"
Issues = "https://github.com/rutipo/clawguard-sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["clawguard"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
